# langchain-sandbox-vfs

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  langflow_component.py  main.py  pyproject.toml  server.py
agent/: config.py  db.py  graph.py  sandbox.py  skills.py  storage.py  tools.py
docs/: storage-backends.md
docs/kubernetes/: ceph-rook-setup.md  seaweedfs-setup.md
infra/seaweedfs/: s3.json
skills/: analyze_data.md  search_knowledge.md  write_code.md
ui/: next.config.ts  package-lock.json
ui/app/: layout.tsx  page.tsx
ui/app/api/chat/: route.ts
ui/app/api/files/: route.ts
ui/app/api/files/[path]/: route.ts
ui/app/api/threads/: route.ts
ui/components/: Chat.tsx  FilePanel.tsx  ToolCallBadge.tsx
ui/lib/: api.ts
