[project]
name = "deepagent-sandbox"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "kubernetes>=35.0.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "minio>=7.2.20",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.28",
    "uvicorn[standard]>=0.46.0",
]
